made overflow on .header hidden due to bug

--- a/css/header.css
+++ b/css/header.css
@@ -1,3 +1,6 @@
+.header {
+  overflow: hidden;
+}
 .header__logo {
   height: 150px;
   text-align: center;
